progress jekyll susy

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1,4 +1,16 @@
 
-@import "susy";
+// ----
+// Sass (v3.3.0.rc.2)
+// Compass (v1.0.0.alpha.17)
+// Breakpoint (v2.4.1)
+// Susy (v2.0.0.beta.3)
+// ----
 
-@import "_base.scss";
+@import "compass";
+@import "compass/reset";
+@import "susy";
+@import "breakpoint"; 
+
+
+@import "_susyTemplate.scss";
+// @import "_base.scss";
