--- a/app/_scss/_susyTemplate.scss
+++ b/app/_scss/_susyTemplate.scss
@@ -1,147 +1,180 @@
-
-
-
-// Small
-// -----
-
 $susy: (
-  columns: 4,
-  column-width: 4em,
-  gutter-position: inside,
+    columns: 12,
+    gutters: 1/4,
 );
 
-$medium: layout(8);
-$large: layout(12);
-
-.container {
-  @include container($large);
-  overflow: hidden;
+body {
+    background: #eee;
+    @include container(80%);
 }
 
-.left { @include span(3 at span(-3 wide) isolate); }
-.main { @include span(full at 1 isolate); }
-.right {
-  @include span(3 at 100% isolate);
-  margin-right: -200%;
+a {
+    color: #2980b9;
+    text-decoration: none;
 }
 
-.show-left {
-  &:checked {
-    ~ .left { @include push(0); }
-    ~ .main { @include push(3); }
-  }
-}
+aside ul {
+    padding: 0;
 
-.show-right {
-  &:checked {
-    ~ .left { @include pull(6); }
-    ~ .main { @include pull(3); }
-    ~ .right { @include push(1); }
-  }
-}
+    li {
+        list-style: none;
+        margin: 0;
 
+        a {
+            display: block;
+            padding: 10px 5%;
+            border-bottom: solid 1px #95a5a6;
+        }
 
-// Medium
-// ------
-
-@include susy-breakpoint(40em, $medium) {
-  .left { @include span(3 at 1 isolate); }
-  .main { @include span(5 at 4 isolate); }
-
-  .show-left {
-    &:checked {
-      ~ .left { @include push(0); }
-      ~ .main { @include push(3); }
     }
-  }
-
-  .show-right {
-    &:checked {
-      ~ .left { @include pull(3); }
-      ~ .main { @include push(0); }
-      ~ .right { @include push(5); }
-    }
-  }
-
-  [for="left"] { display: none; }
 }
 
 
-// Large
-// ------
-
-@include susy-breakpoint(60em, $large) {
-  .left { @include span(3 at 1 isolate); }
-  .main { @include span(6 at 4 isolate); }
-  .right { @include span(3 at 10 isolate); }
-
-  .show-left {
-    &:checked {
-      ~ .main { @include push(3); }
-    }
-  }
-
-  .show-right {
-    &:checked {
-      ~ .left { @include push(0); }
-      ~ .main { @include push(3); }
-      ~ .right { @include push(9); }
-    }
-  }
-
-  [for="right"] { display: none; }
-}
 
 
-// Styles
-// ------
 
-.toggle-input {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-}
-.toggle {
-  cursor: pointer;
-  color: blue;
-  &:hover, &:focus, &:active {
-    color: red;
-  }
-}
 
-header, footer {
-  padding: 1em 0;
-  background-color: rgba(gray, .25);
-  text-align: center;
-}
+// // Small
+// // -----
 
-[for] {
-  position: relative;
-  z-index: 10;
-  padding: 0 1em;
-}
+// $susy: (
+//   columns: 4,
+//   column-width: 4em,
+//   gutter-position: inside,
+// );
 
-[for="left"] { float: left; }
-[for="right"] { float: right; }
+// $medium: layout(8);
+// $large: layout(12);
 
-.left, .main, .right {
-  @include transition(all 300ms);
-  padding-top: 1em;
-  padding-bottom: 1em;
-  height: 12em;
-}
+// .container {
+//   @include container($large);
+//   overflow: hidden;
+// }
 
-.left {
-  background: rgba(red, .25);
-}
+// .left { @include span(3 at span(-3 wide) isolate); }
+// .main { @include span(full at 1 isolate); }
+// .right {
+//   @include span(3 at 100% isolate);
+//   margin-right: -200%;
+// }
 
-.right {
-  background: rgba(yellow, .5);
-}
+// .show-left {
+//   &:checked {
+//     ~ .left { @include push(0); }
+//     ~ .main { @include push(3); }
+//   }
+// }
 
-footer {
-  @include break;
-}
+// .show-right {
+//   &:checked {
+//     ~ .left { @include pull(6); }
+//     ~ .main { @include pull(3); }
+//     ~ .right { @include push(1); }
+//   }
+// }
+
+
+// // Medium
+// // ------
+
+// @include susy-breakpoint(40em, $medium) {
+//   .left { @include span(3 at 1 isolate); }
+//   .main { @include span(5 at 4 isolate); }
+
+//   .show-left {
+//     &:checked {
+//       ~ .left { @include push(0); }
+//       ~ .main { @include push(3); }
+//     }
+//   }
+
+//   .show-right {
+//     &:checked {
+//       ~ .left { @include pull(3); }
+//       ~ .main { @include push(0); }
+//       ~ .right { @include push(5); }
+//     }
+//   }
+
+//   [for="left"] { display: none; }
+// }
+
+
+// // Large
+// // ------
+
+// @include susy-breakpoint(60em, $large) {
+//   .left { @include span(3 at 1 isolate); }
+//   .main { @include span(6 at 4 isolate); }
+//   .right { @include span(3 at 10 isolate); }
+
+//   .show-left {
+//     &:checked {
+//       ~ .main { @include push(3); }
+//     }
+//   }
+
+//   .show-right {
+//     &:checked {
+//       ~ .left { @include push(0); }
+//       ~ .main { @include push(3); }
+//       ~ .right { @include push(9); }
+//     }
+//   }
+
+//   [for="right"] { display: none; }
+// }
+
+
+// // Styles
+// // ------
+
+// .toggle-input {
+//   position: absolute;
+//   opacity: 0;
+//   z-index: -1;
+// }
+// .toggle {
+//   cursor: pointer;
+//   color: blue;
+//   &:hover, &:focus, &:active {
+//     color: red;
+//   }
+// }
+
+// header, footer {
+//   padding: 1em 0;
+//   background-color: rgba(gray, .25);
+//   text-align: center;
+// }
+
+// [for] {
+//   position: relative;
+//   z-index: 10;
+//   padding: 0 1em;
+// }
+
+// [for="left"] { float: left; }
+// [for="right"] { float: right; }
+
+// .left, .main, .right {
+//   @include transition(all 300ms);
+//   padding-top: 1em;
+//   padding-bottom: 1em;
+//   height: 12em;
+// }
+
+// .left {
+//   background: rgba(red, .25);
+// }
+
+// .right {
+//   background: rgba(yellow, .5);
+// }
+
+// footer {
+//   @include break;
+// }
 
 
 
